@startuml

title __CHATPROJECT's Class Diagram__\n

  namespace sk.uniza {
    abstract class sk.uniza.AbstractServer {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.ConcreteUserSocketCreator {
    }
  }
  

  namespace sk.uniza {
    interface sk.uniza.IServerCallBack {
    }
  }
  

  namespace sk.uniza {
    interface sk.uniza.IUserSocket {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.Main {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.Server {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.TcpServer {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.TcpUserSocket {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.UdpServer {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.UdpSocketUser {
    }
  }
  

  namespace sk.uniza {
    abstract class sk.uniza.UserSocketCreator {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.WebSocketUser {
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.WebsocketServer {
    }
  }
  

  sk.uniza.AbstractServer o-- sk.uniza.ConcreteUserSocketCreator : concreteUserSocketCreator
  sk.uniza.ConcreteUserSocketCreator -up-|> sk.uniza.UserSocketCreator
  sk.uniza.Server .up.|> sk.uniza.IServerCallBack
  sk.uniza.Server o-- sk.uniza.ConcreteUserSocketCreator : concreteUserSocketCreator
  sk.uniza.TcpServer .up.|> java.lang.Runnable
  sk.uniza.TcpServer -up-|> sk.uniza.AbstractServer
  sk.uniza.TcpServer o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.TcpUserSocket .up.|> sk.uniza.IUserSocket
  sk.uniza.TcpUserSocket o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.UdpServer .up.|> java.lang.Runnable
  sk.uniza.UdpServer -up-|> sk.uniza.AbstractServer
  sk.uniza.UdpServer o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.UdpSocketUser .up.|> sk.uniza.IUserSocket
  sk.uniza.WebSocketUser .up.|> sk.uniza.IUserSocket
  sk.uniza.WebSocketUser o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.WebsocketServer -up-|> sk.uniza.AbstractServer
  sk.uniza.WebsocketServer o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.WebsocketServer o-- sk.uniza.WebsocketServer.InnerWebSocketServer : proxyWebSocketServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
